--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,10 @@ body {
   padding-inline: 5rem;
   padding-block: 1.25rem;
   background-color: var(--clr-dark-blue);
-  color:var(--clr-white)
+  color:var(--clr-white);
+  /* position: sticky; */
+  top: 0;
+  z-index: 100;
 }
 
 .mode-button {
@@ -101,6 +104,7 @@ body {
   color:inherit;
   font-size:1rem;
   font-weight:300;
+  cursor: pointer;
 }
 
 .mode-button:hover,
@@ -114,7 +118,8 @@ body {
 }
 
 .search-page {
-  padding-inline:4rem;
+  position: relative;
+  /* padding-inline:4rem; */
   padding-bottom: 3rem;
   min-height:100%;
 }
@@ -122,7 +127,7 @@ body {
 .region-form {
   display:flex;
   justify-content: space-between;
-  padding-block:2.5rem;
+  /* padding-block:2.5rem; */
 }
 
 .option-input {
@@ -167,6 +172,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2rem;
+  padding-inline: 3rem;
 }
 
 .header-country {
@@ -286,7 +292,17 @@ body {
 
 .mode-button {
   width: 150px;
-  /* display:flex; */
+}
+
+.search-form {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: hsl(0, 0%, 98%);
+  padding: 1rem;
+  margin-bottom: 2.5rem;
+  padding-inline: 3rem;
+
 }
 
 @media screen and (max-width: 1000px) {
@@ -357,13 +373,9 @@ body {
 
 @media (max-width: 700px) {
 
-  .search-page {
+  /* .search-page {
     padding-inline: 1.5rem;
-  }
-
-  .brief-info {
-    /* height:fit-content; */
-  }
+  } */
 
   .brief-info {
     padding-bottom: 3rem;
